Added EF core with console query logging, configured for PostgreSQL in snake_case, added docker-compose for PostgreSQL, add initial migration

--- a/backend/src/PetHelpers.API/appsettings.Development.json
+++ b/backend/src/PetHelpers.API/appsettings.Development.json
@@ -2,7 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "PetHelpersDbContext": "User ID=Admin;Password=123;Host=localhost;Port=5432;Database=PetHelpersDb;"
   }
 }
+
