make it to last update of previous repo

--- a/backend/src/PetHelpers.API/PetHelpers.API.csproj
+++ b/backend/src/PetHelpers.API/PetHelpers.API.csproj
@@ -22,4 +22,8 @@
       <ProjectReference Include="..\PetHelpers.Infrastructure\PetHelpers.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+    </ItemGroup>
+
 </Project>
